plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.6'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'org.flywaydb.flyway' version '7.15.0'
}
apply plugin: 'java'
group = 'com.voloasoftware'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//JPA & JDBC
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	//Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//Spring boot starter
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	//Passay
	implementation group: 'org.passay', name: 'passay', version: '1.6.2'

	//Flyway
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'

	//ModelMapper
	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.1.1'

	//JUnit
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
	testImplementation 'junit:junit:4.13.1'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
	testImplementation 'org.testng:testng:7.1.0'

	//Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//Logs
	compileOnly group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'

	//e-mail
	implementation 'com.sun.mail:javax.mail:1.6.2'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '1.2.0.RELEASE'
	compileOnly('org.springframework.boot:spring-boot-starter-mail')
	compileOnly('javax.mail:mail:1.4.7')
	//GreenMail
	testImplementation group: 'com.icegreen', name: 'greenmail-junit5', version: '1.6.0'
	testImplementation group: 'com.icegreen', name: 'greenmail', version: '1.5.0'

	//JWT
	//jjwt-api ?
	//jjwt-impl ?
	//jjwt-jackson ?
//	implementation 'io.jsonwebtoken:jjwt:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	//SWAGGER
	implementation 'io.springfox:springfox-boot-starter:3.0.0'
	compileOnly group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
	compileOnly group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'

	//MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'
}

flyway {
	cleanDisabled = false
	url = 'jdbc:mysql://localhost:3306/tinder'
	user = 'root'
	password = 'vratsasoft'
	schemas = ['tinder']
}

test {
	useJUnitPlatform()
}
